samples/_failures_safe/1761658334_7b2622_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3ecf444.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c3ecf444.c:156:5: error: expected declaration or statement at end of input
  156 |     printf("Shortest distances from node %d:\n", start);
      |     ^~~~~~
